# mlop_projects

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  prefect.yaml  pyproject.toml
.claude/: settings.json
.claude/commands/: deploy.md  dev.md  ingest.md  test.md
.claude/hooks/: lint-python.sh  protect-files.sh
.claude/rules/: git-discipline.md  plotlot-backend.md  plotlot-frontend.md
.github/workflows/: ci.yml  claude-review.yml  deploy-taste-skill.yml  dev-branch-pr.yml  eval.yml  nightly-health.yml
docs/: BRANCH_DELIVERY_WORKFLOW.md  REPO_HISTORY_REWRITE.md
plotlot/: .env.example  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  render.yaml
plotlot/data/golden/: golden_data.json
plotlot/frontend/: README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
plotlot/frontend/tests/: VC_READINESS_E2E_REPORT.md  chat-interaction.spec.ts  design-system.spec.ts  e2e-visual.spec.ts  helpers.ts  uat.spec.ts  vc-readiness.no-db.spec.ts
plotlot/scripts/: ci_eval_gate.py  run_eval.py
plotlot/src/plotlot/: cli.py  config.py
plotlot/tests/eval/: golden_data.json  scorers.py  test_eval_experiment.py  (+2 more)
scripts/: e2e-quick.js  e2e-regression.js  test-pipeline.js
src/plotlot/: cli.py  config.py
study-guides/: sandboxing-infra-engineer-roadmap.md
tests/: conftest.py
tests/eval/: test_eval_live.py
tests/unit/: test_calculator.py  test_chunker.py  test_geocode.py  test_google_workspace.py  test_llm.py  test_pipeline.py  test_property.py  test_scraper.py
(+83 files in other folders)
