[project]
name = "plotlot"
version = "2.0.0"
description = "AI-powered zoning analysis for South Florida real estate"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
prefect = ["prefect>=3.0"]

[project.scripts]
plotlot = "plotlot.cli:main"
plotlot-ingest = "plotlot.cli:ingest_main"
plotlot-search = "plotlot.cli:search_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
